cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"

members = [
	"hyu",
	"wlm",
]

[workspace.dependencies]
color-eyre = { version = "0.6.3", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }

[profile.release]
lto = true
# panic = "abort"
codegen-units = 1
rustflags = ["-C", "target-cpu=native"]
debug = true
