[package]
name = "hyu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.1"
fixed = { version = "1.26.0", features = ["serde"] }
log = "0.4.20"
nix = { version = "0.27.1", features = ["socket", "uio", "mman"] }
pollster = "0.3.0"
serde = { version = "1.0.189", features = ["derive"] }
wgpu = "0.18.0"
winit = { version = "0.29.9", features = ["rwh_05"] }
wlm = { path = "../wlm" }
