[package]
name = "hyu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
fixed = { version = "1.26.0", features = ["serde"] }
glow = "0.13.1"
glutin = { version = "0.31.3", default-features = false, features = ["egl", "wayland"] }
log = "0.4.21"
nix = { version = "0.28.0", features = ["socket", "uio", "mman", "time", "ioctl", "poll", "fs", "term"] }
pollster = "0.3.0"
raw-window-handle = "0.5.0"
serde.workspace = true
wgpu = "0.19.3"
winit = { version = "0.29.15", features = ["rwh_05"] }
wlm = { path = "../wlm" }
