[package]
name = "hyu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.38.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
color-eyre.workspace = true
fixed = { version = "1.26.0", features = ["serde"] }
glow = "0.13.1"
nix = { version = "0.28.0", features = ["socket", "uio", "mman", "time", "ioctl", "poll", "fs", "term", "signal", "event"] }
serde.workspace = true
wlm = { path = "../wlm" }
